--- a/06_Advanced CSS/02_2D and 3D Transforms/code-lab-1/style.css
+++ b/06_Advanced CSS/02_2D and 3D Transforms/code-lab-1/style.css
@@ -82,95 +82,125 @@ section h2 {
 /* Existing transform demos */
 
 #myDiv1 {
+    transform: translate(50px);
 }
 
 #myDiv2 {
+    transform: translate(50px, 20px);
 }
 
 #myDiv3 {
+    transform: translate(100px, 30px);
 }
 
 #myDiv4 {
+    transform: rotate(25deg);
 }
 
 #myDiv5 {
+    transform: rotate(45deg);
 }
 
 #myDiv6 {
+    transform: rotate(-45deg);
 }
 
 #myDiv7 {
+    transform: scaleX(0.7);
 }
 
 #myDiv8 {
+    transform: scaleX(90%);
 }
 
 #myDiv9 {
+    transform: scaleX(1.1);
 }
 
 #myDiv10 {
+    transform: scaleY(0.5);
 }
 
 #myDiv11 {
+    transform: scaleY(70%);
 }
 
 #myDiv12 {
+    transform: scaleY(1.1);
 }
 
 #myDiv13 {
+    transform: scale(0.7);
 }
 
 #myDiv14 {
+    transform: scale(110%);
 }
 
 #myDiv15 {
+    transform: scale(1.1, 0.5);
 }
 
 #myDiv16 {
+    transform: skewX(15deg);
 }
 
 #myDiv17 {
+    transform: skewX(30deg);
 }
 
 #myDiv18 {
+    transform: skewX(-25deg);
 }
 
 #myDiv19 {
+    transform: skewY(10deg);
 }
 
 #myDiv20 {
+    transform: skewY(30deg);
 }
 
 #myDiv21 {
+    transform: skewY(-25deg);
 }
 
 #myDiv22 {
+    transform: skew(15deg);
 }
 
 #myDiv23 {
+    transform: skew(15deg, 15deg);
 }
 
 #myDiv24 {
+    transform: skew(-15deg);
 }
 
 #myDiv25 {
+    transform: skew(-15deg, 15deg);
 }
 
 #myDiv26 {
+    transform: rotate(15deg);
 }
 
 #myDiv27 {
+    transform: matrix(1, -0.3, 1, 0, 50);
 }
 
 #myDiv28 {
+    transform: matrix(1, 0, 0.5, 50, 50);
 }
 
 #myDiv29 {
+    transform: matrix(2, 1, 0.5, 1, 90, 70);
 }
 
 /* Combined transforms */
 
 #myDiv30 {
+    transform: translate(50px, 20px) rotate(20deg);
     /* Move right and down, then rotate */
 
 }
